docs-archive/apache-airflow-providers-amazon/3.1.1/_sources/_api/airflow/providers/amazon/aws/hooks/redshift_cluster/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.hooks.redshift_cluster`
=============================================================

.. py:module:: airflow.providers.amazon.aws.hooks.redshift_cluster


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.hooks.redshift_cluster.RedshiftHook




.. py:class:: RedshiftHook(*args, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`

   Interact with AWS Redshift, using the boto3 library

   Additional arguments (such as ``aws_conn_id``) may be specified and
   are passed down to the underlying AwsBaseHook.

   .. seealso::
       :class:`~airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`

   :param aws_conn_id: The Airflow connection used for AWS credentials.

   .. py:method:: cluster_status(self, cluster_identifier)

      Return status of a cluster

      :param cluster_identifier: unique identifier of a cluster
      :param skip_final_cluster_snapshot: determines cluster snapshot creation
      :param final_cluster_snapshot_identifier: Optional[str]


   .. py:method:: delete_cluster(self, cluster_identifier, skip_final_cluster_snapshot = True, final_cluster_snapshot_identifier = None)

      Delete a cluster and optionally create a snapshot

      :param cluster_identifier: unique identifier of a cluster
      :param skip_final_cluster_snapshot: determines cluster snapshot creation
      :param final_cluster_snapshot_identifier: name of final cluster snapshot


   .. py:method:: describe_cluster_snapshots(self, cluster_identifier)

      Gets a list of snapshots for a cluster

      :param cluster_identifier: unique identifier of a cluster


   .. py:method:: restore_from_cluster_snapshot(self, cluster_identifier, snapshot_identifier)

      Restores a cluster from its snapshot

      :param cluster_identifier: unique identifier of a cluster
      :param snapshot_identifier: unique identifier for a snapshot of a cluster


   .. py:method:: create_cluster_snapshot(self, snapshot_identifier, cluster_identifier)

      Creates a snapshot of a cluster

      :param snapshot_identifier: unique identifier for a snapshot of a cluster
      :param cluster_identifier: unique identifier of a cluster



